{"message":"Update file: collection.yml","userId":"1620","fileName":"collection.yml"}

--- a/_our-school/collection.yml
+++ b/_our-school/collection.yml
@@ -16,6 +16,7 @@ collections:
       - Our Staff/Upper Primary.md
       - Our Staff/Allied Educators.md
       - Our Staff/School Admin Team.md
+      - School Achievements/2025.md
       - School Achievements/.keep
       - School Achievements/2024.md
       - School Achievements/2023.md
