{"message":"Update file: collection.yml","userId":"1620","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -9,6 +9,7 @@ collections:
       - Curriculum/.keep
       - Curriculum/Flagship Programmes.md
       - Curriculum/Learning Environment.md
+      - Events & Celebrations/2025.md
       - Events & Celebrations/2024.md
       - Events & Celebrations/.keep
       - Events & Celebrations/2023.md
